ARGUS-49665: Switched from Java HLRC to Java API Client for ElasticSearch.